<resources>
    <string name="app_name">AirBooks</string>
    <string name="tab1">Home</string>
    <string name="tab2">Explore</string>
    <string name="tab3">Library</string>
    <string name="tab4">Profile</string>
    <string name="section_add_your_book">ADD YOUR BOOK</string>
    <string name="popUp_tab_one">Change image</string>
    <string name="popUp_tab_two">Change email</string>
    <string name="popUp_tab_three">Change password</string>
    <string name="profile_image_review">profile image</string>
    <string name="name_surname_review">Name Surname</string>
    <string name="time_ago_review">1 hour ago</string>
    <string name="review_description">here is your description</string>
    <string name="button_read_all">Read all</string>
    <string name="topBar">Top bar</string>
    <string name="back_button">back button</string>
    <string name="dismiss_button">dismiss button</string>
    <string name="insert_description_tile">Description</string>
    <string name="description_hint">Insert your description here</string>
    <string name="initial_character_count">Character left 600</string>
    <string name="next_button_text">NEXT</string>
    <string name="add_button_text">ADD</string>
    <string name="upload_button">upload button</string>
    <string name="select_file_add_book">Select your file</string>
    <string name="select_genre_add_book">Select your genre</string>
    <string name="background_image">background image</string>
    <string name="search_icon">search icon</string>
    <string name="search_library_hint">Cerca libri…</string>
    <string name="author_name_explore">by Gerard Woodward</string>
    <string name="book_title_explore">All this has</string>
    <string name="cover_book">cover book</string>
    <string name="number_reviews_explore">97 Reviews</string>
    <string name="read_now_button">LEGGI ADESSO</string>
    <string name="name_surname_profile">Marion Newton</string>
    <string name="provenance_pin_profile">provenance</string>
    <string name="numbers_of_readers_image_contentDescription">numbers of readers</string>
    <string name="provenance_text_placeHolder">Italy</string>
    <string name="follow_button_profile">Follow</string>
    <string name="numbers_readers_text_placeHolder">2178</string>
    <string name="all_books_profile">All Books (27)</string>
    <string name="all_reviews_profile">All reviews (220)</string>
    <string name="topBar_alert">topBar alert</string>
    <string name="title_topBar_alert">Description</string>
    <string name="placeholder_text_showMore_alert">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum</string>
    <string name="category_type">category type</string>
    <string name="Image_background_colorGenre">Image background colorGenre</string>
    <string name="image_colorGenre">image color genre</string>
    <string name="book_title">Title</string>
    <string name="author_book_home_card">author</string>
    <string name="numbers_lovers_image">numbers of lovers image</string>
    <string name="numbers_lovers_text_placeHolder">0</string>
    <string name="numbers_readers_text_placeHolder_card_home">0</string>
    <string name="genre_color_add_book">genre type and color genre</string>
    <string name="showcase_home">showcase home image</string>
    <string name="text_review_profile">Lorem ipsum dolor sit amet, elit consectetuer adipiscing elit. Elit aenean…</string>
    <string name="book_author_profile">By Roberto Vecchio</string>
    <string name="book_title_profile">All this has nothing</string>
    <string name="genre_color_profile">genre color</string>
    <string name="editText_hint_add_book">Insert your title here</string>
    <string name="insert_image_add_book">insert here your image</string>
    <string name="bookshelf">bookshelf</string>
    <string name="add_book_button">add Book button</string>
    <string name="continue_read">Continua a leggere</string>
    <string name="recents">Più recenti</string>
    <string name="categories_home">Generi</string>
    <string name="best_weeek">Libri migliori</string>
    <string name="main_section_appName">Airbooks</string>
    <string name="book_detail_name_section">BOOK DETAIL</string>
    <string name="drawable_card_genre">Genre</string>
    <string name="title_book_detail">This is a try</string>
    <string name="author_book_detail">author</string>
    <string name="all_review_section">ALL REVIEWS</string>
    <string name="reviews_button">reviews button</string>
    <string name="simple_circle_background">proflie border</string>
    <string name="review_detail_name">REVIEW DETAIL</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="sign_up">Not have an account? <u>Sign up</u></string>
    <string name="onboarding_one_description">Tutti amano leggere. Airbooks è il luogo ideale per leggere tanti fantastici libri, crearli e condividerli</string>
    <string name="onboarding_one_title">Leggi, crea, condividi</string>
    <string name="title_page_two">Colleziona i tuoi libri preferiti</string>
    <string name="description_page_two">Riempi la libreria con i tuoi libri preferiti.\nSaranno sempre a portata di mano</string>
    <string name="book_spot_page_trhee_intro"><i>\"Che libro straordinario!\"</i></string>
    <string name="title_intro_page_three">Fai sentire la tua voce</string>
    <string name="description_intro_page_three">Lascia una recensione ai libri di altri autori ed esprimi i tuoi pensieri su di loro. Gli autori apprezzeranno senz\'altro</string>
    <string name="title_page_four">Che fare adesso?</string>
    <string name="description_page_four">Una tazza di tè, un comodo divano, e un buon libro da leggere. La giornata perfetta.</string>
    <string name="button_text_page_four">CONTINUA</string>
    <string name="back_button_login_host">back button</string>
    <string name="simple_circle_background_login_host">proflie border</string>
    <string name="email_edit_text_sign_in">Email</string>
    <string name="password_edit_text_sign_in">Password</string>
    <string name="login_button_sign_in">LOGIN</string>
    <string name="forgot_password_sign_in"><u>Forgot the password?</u></string>
    <string name="text_or_log_in_sign_in">Or login with</string>
    <string name="facebook">facebook</string>
    <string name="no_account_sign_in">Don\'t have an account yet? <b>Sign up</b></string>
    <string name="recover">Recover</string>
    <string name="back_to_login_recover_password">Back to login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="nationality_sign_up">Nationality</string>
    <string name="confirm_sign_up">Confirm</string>
    <string name="sign_up_button">Sign up</string>
    <string name="back_to_login_sign_up">Back to login</string>
</resources>