<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.corelab.airbooks.activity.AddDescription">

    <ImageView
        android:id="@id/top_bar_description_popup"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:scaleType="fitXY"
        android:src="@drawable/barra_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/topBar"/>

    <TextView
        android:id="@id/top_bar_name_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/section_add_your_book"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/top_bar_description_popup"
        app:layout_constraintEnd_toEndOf="@id/top_bar_description_popup"
        app:layout_constraintStart_toStartOf="@id/top_bar_description_popup"
        app:layout_constraintTop_toTopOf="@id/top_bar_description_popup" />

    <ImageButton
        android:id="@id/left_arrow_add_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="17dp"
        android:paddingTop="20dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:src="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="@id/top_bar_description_popup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button"/>

    <ImageButton
        android:id="@id/dismiss_button_description"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/dismiss"
        app:layout_constraintBottom_toBottomOf="@id/top_bar_description_popup"
        app:layout_constraintEnd_toEndOf="@id/top_bar_description_popup"
        app:layout_constraintTop_toTopOf="@id/top_bar_description_popup"
        android:contentDescription="@string/dismiss_button"/>

    <TextView
        android:id="@id/add_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/insert_description_tile"
        android:textColor="#6C7A8C"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/editText_description"
        app:layout_constraintTop_toBottomOf="@id/top_bar_description_popup" />

    <EditText
        android:id="@id/editText_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/description_edit_text"
        android:descendantFocusability="beforeDescendants"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:gravity="top|start"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine|textNoSuggestions"
        android:maxLength="1200"
        android:padding="9dp"
        android:singleLine="false"
        android:textColor="#FFF"
        android:textColorHint="#90FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/add_file_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_description_text" />

    <TextView
        android:id="@id/text_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_character_count"
        android:textColor="#B7B7B7"
        app:layout_constraintStart_toStartOf="@id/editText_description"
        app:layout_constraintTop_toBottomOf="@id/editText_description" />

    <Button
        android:id="@id/color_button_next_add_book"
        android:layout_width="77dp"
        android:layout_height="41dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_next"
        android:scaleType="fitXY"
        android:text="@string/next_button_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@id/upload_arrow_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#00000000"
        android:src="@drawable/upload_arrow"
        app:layout_constraintBottom_toTopOf="@id/color_button_next_add_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/upload_button"/>

    <TextView
        android:id="@id/add_file_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginStart="9dp"
        android:text="@string/select_file_add_book"
        android:textColor="#6C7A8C"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/upload_arrow_id"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
