<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".section.ReviewDetail">

    <!--<developer.shivam.library.DiagonalView
        android:id="@+id/diagonal_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_color"
        app:layout_constraintBottom_toTopOf="@+id/guideline_background"
        app:layout_constraintTop_toTopOf="parent"
        diagonal:angle="16"
        diagonal:diagonalColor="#fafafa"
        diagonal:diagonalGravity="left" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/review_detail_name"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="17dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:background="#00000000"
        android:contentDescription="@string/reviews_button"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_shared_reviewDetail"
        android:layout_width="154dp"
        android:layout_height="231dp"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="126dp"
        android:background="#FFFFFF"
        android:transitionName="imageCoverTransition"
        app:cardCornerRadius="4dp"
        app:cardElevation="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_cover_shared"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cover_book"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/title_bookDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:text="@string/title_book_detail"
        android:textColor="#6C7A8C"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_shared_reviewDetail" />

    <TextView
        android:id="@+id/author_bookDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/author_book_detail"
        android:textColor="#4790E1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bookDetail" />

    <it.corelab.studios.airbooks.view.widget.JustifyTextView
        android:id="@+id/description_review_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder_text_showMore_alert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_bookDetail" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="367dp" />

</android.support.constraint.ConstraintLayout>