<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="65dp"
    android:descendantFocusability="blocksDescendants">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_categories_shared"
        android:layout_width="124dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="220dp"
        app:cardCornerRadius="4dp"
        app:contentPadding="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView_shared"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linear_genre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/text_genre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawable_card_genre"
                android:textColor="#F9F9F9"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="4"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/numbers_of_readers_image_contentDescription"
                    android:src="@drawable/ic_readers" />
                <TextView
                    android:id="@+id/numb_lovers_book_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numbers_lovers_text_placeHolder"
                    android:textColor="#FFF"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/ic_bookmark"
                    android:contentDescription="@string/numbers_lovers_image" />

                <TextView
                    android:id="@+id/numb_readers_book_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numbers_readers_text_placeHolder"
                    android:textColor="#FFF"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_shared"
        android:layout_width="175dp"
        android:layout_height="261dp"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_bestweek_shared"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cover_book"
            android:scaleType="fitXY" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_shared">

        <TextView
            android:id="@+id/title_bookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/title_book_detail"
            android:textColor="#6C7A8C"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/author_bookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:maxLines="2"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/didot"
            android:text="@string/author_book_detail"
            android:textColor="#6C7A8C"
            android:textSize="18sp"/>

        <RatingBar
            android:id="@+id/ratingBar_book_detail"
            style="@style/RatingBarSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="3.5"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:stepSize="0.5" />

        <it.corelab.studios.airbooks.view.widget.JustifyTextView
            android:id="@+id/description_book_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:text="@string/placeholder_text_showMore_alert"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:textColor="#6C7A8C"
            android:textSize="15sp"
            android:text="Tag:"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/tag_book_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/no_tag_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:text="Questo libro non ha nessun tag"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="© Tutti i diritti riservati all'autore di questo libro."
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:textSize="13sp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
